name:                wyorepl
version:             0.1.0.0
synopsis:            Write your own REPL Tutorial
description:         An example to explain how to implement REPL using haskeline.
                     To demonstrate it, this program defines toy example programming language,
                     then implements interpreter and REPL for this language.
homepage:            https://github.com/viercc/wyorepl#readme
license:             BSD3
license-file:        LICENSE
author:              Koji Miyazato
maintainer:          viercc@gmail.com
copyright:           2018 Koji Miyazato
category:            Tutorial
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable wyorepl
  hs-source-dirs:      src
  main-is:             Main.lhs
  other-modules:       Language, Parser, Repl, ReplSyntax
  default-language:    Haskell2010
  build-depends:       base >= 4.9 && < 5
                     , containers
                     , mtl
                     , megaparsec
                     , haskeline
  ghc-options:         -Wall -Werror
